Fix scrollbars

--- a/public/css/nightwalker.css
+++ b/public/css/nightwalker.css
@@ -380,6 +380,10 @@ input::placeholder {
     -webkit-border-radius: 2px;
     border-radius: 2px;
 }
+#transferList.panel.expanded {
+    overflow-y: hidden !important;
+  }
+
 
 /* CREDITS
 ----------------------------------------------------------------------------------------------*/
